--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,8 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+  firebase_auth: ^0.16.0
+  google_sign_in: ^4.4.3
   hex: ^0.1.2
   charcode: ^1.1.3
   convert: ^2.1.1
@@ -53,8 +55,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/
+  #  - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
